src/tests/integer_infix_boolean_expression/snapshots/monkey_interpreter__tests__integer_infix_boolean_expression__test_integer_infix_boolean_expression_case_10_syntax_analysis.snap
---
source: src/tests/integer_infix_boolean_expression/mod.rs
expression: abstract_syntax_tree
---
[
    Expression {
        expression: Infix {
            left_hand: Infix {
                left_hand: Integer {
                    literal: 1,
                },
                operator: LesserThan,
                right_hand: Integer {
                    literal: 2,
                },
            },
            operator: Equals,
            right_hand: Boolean {
                literal: false,
            },
        },
    },
]
