src/tests/integer_infix_boolean_expression/snapshots/monkey_interpreter__tests__integer_infix_boolean_expression__test_integer_infix_boolean_expression_case_2_syntax_analysis.snap
---
source: src/tests/integer_infix_boolean_expression/mod.rs
expression: abstract_syntax_tree
---
[
    Expression {
        expression: Infix {
            left_hand: Integer {
                literal: 5,
            },
            operator: GreaterThan,
            right_hand: Integer {
                literal: 2,
            },
        },
    },
]
